policy-monitoring/tests/io_test_resources/file_not_found/expected_stderr.txt
^Fatal error: exception Sys_error\(".*file_not_found/predicates\.sig: No such file or directory"\)$